# prism

./: .gitignore  .gitmodules  Cargo.toml  PLAN.md  README.md  e2e-demo.sh  package-lock.json  package.json
.github/workflows/: ci.yml  icon-assets.yml  release.yml
crates/curator-cli/: Cargo.toml
crates/curator-cli/src/: lib.rs  main.rs  progress.rs  service.rs
crates/curator-core/: Cargo.toml
crates/curator-core/src/: adapter.rs  cache.rs  db.rs  error.rs  fingerprint.rs  lib.rs  progress.rs  render.rs  schema.rs
crates/curator-ffi/: Cargo.toml
crates/curator-ffi/src/: lib.rs
crates/curator-gui-win/: Cargo.toml  README.md  build.rs
crates/curator-gui-win/src/: main.rs
crates/curator-win/: Cargo.toml  README.md
crates/curator-win/src/: main.rs
crates/prism-cli/: Cargo.toml
crates/prism-cli/examples/: loader_demo.rs
crates/prism-cli/src/: lib.rs  main.rs  out.rs  progress.rs  service.rs  tetra.rs
crates/prism-core/: Cargo.toml
crates/prism-core/src/: adapter.rs  cache.rs  db.rs  fingerprint.rs  lib.rs  render.rs  schema.rs  summary.rs  tga.rs
crates/prism-ffi/: Cargo.toml
crates/prism-ffi/src/: lib.rs
crates/prism-win/: Cargo.toml  README.md  build.rs  prism.rc
crates/prism-win/src/: main.rs
cube/: README.md  package.json  tsconfig.json
cube/db/migrations/: 001-init.sql
cube/src/: builtins.ts  db.ts  diff.ts  extract.ts  git.ts  index.ts  issues.ts  mdx.ts  media.ts  moderation.ts  parse.ts  query-component.ts  query.ts  save.ts  slug.ts  storage.ts  tags.ts  validate.ts
cube/src/auth/: native.ts  passwords.ts
cube/src/editor/: extensions.ts  from-mdast.ts  index.ts  to-markdown.ts
cube/src/http/: index.ts
cube/src/import/mediawiki/: ask.ts  convert.ts  dates.ts  extract-html.ts  fetch.ts  hexdump.ts  index.ts  save.ts  sync.ts  to-markdown.ts  types.ts  wikitext.ts
cube/src/mcp/: index.ts
cube/src/react/: index.tsx
cube/src/schema/: index.ts
cube/styles/: cube.css
cube/tests/: editor.test.ts  helpers.ts  http-auth.test.ts  import-e2e.test.ts  import-extract.test.ts  import-hexdump.test.ts  import-mapping.test.ts  import-wikitext.test.ts  integration.test.ts  mcp-storage.test.ts  media-moderation.test.ts  parse.test.ts  query.test.ts  render.test.ts  schema.test.ts  slug.test.ts  validate.test.ts
macos/: Package.swift  README.md  build-app.sh
macos/Sources/CuratorApp/: AppModel.swift  ContentView.swift  CuratorApp.swift  CuratorService.swift  DiscNode.swift  RecordDoc.swift
macos/Sources/CuratorKit/: curator_ffi.swift
macos/Sources/PrismApp/: AppModel.swift  ContentView.swift  DiscNode.swift  PrismApp.swift  PrismService.swift  RecordDoc.swift
macos/Sources/PrismKit/: prism_ffi.swift
macos/Sources/curator-probe/: main.swift
macos/Sources/curator_ffiFFI/: shim.c
macos/Sources/curator_ffiFFI/include/: curator_ffiFFI.h  module.modulemap
macos/Sources/prism-probe/: main.swift
macos/Sources/prism_ffiFFI/: shim.c
macos/Sources/prism_ffiFFI/include/: module.modulemap  prism_ffiFFI.h
macos/icon/: Assets.car  Prism.icns  make-icns.sh
macos/icon/Prism.icon/: icon.json
old/: README.md  prism
old/app/src/renderer/: App.tsx
old/prism-cli/: pyproject.toml
old/prism-cli/cli/: version.py
old/prism-cli/cli/formats/: xml.py
old/web/: package-lock.json  package.json
old/web/src/: builds-ps1.csv
old/web/src/app/: data-table.tsx  layout.tsx  table2.tsx  table3.tsx
old/web/src/components/: container-info.tsx  file-table.tsx  similar-containers.tsx  table.tsx
ps2exe-adapter/: bundle.py  bundle.sh  curator-adapter.spec  prism-adapter.spec  pyinstaller_entry.py  pyproject.toml  rthook_libarchive.py  rthook_rarfile.py
ps2exe-adapter/curator_adapter/: __init__.py  audio.py  cli.py  progress.py  viewable.py
ps2exe-adapter/prism_adapter/: __init__.py  cli.py  progress.py  viewable.py
ps2exe-adapter/tests/: test_archives.py  test_assets.py  test_audio.py  test_chunking.py  test_installshield.py  test_nullify.py  test_shingle.py  test_viewable.py
scripts/: bootstrap-linux.sh  curator-build-set.sh  ps2exe-repro.py  run-main.sh  wiki-build-mapping.py
web/: .gitignore  README.md  next.config.ts  package-lock.json  package.json
web/db/: schema.sql
web/db/migrations/: 001-fast-pages.sql  002-assets.sql  003-lot.sql  004-repo.sql  005-private.sql  006-user-media.sql  007-duplicates.sql  008-games.sql  009-game-system.sql  010-asset-dates.sql  011-media-label.sql
web/scripts/: attach-repo.ts  backfill-asset-dates.ts  bot.ts  create-user.mts  cube-mcp.mts  dotenv.ts  git-export.mts  import-wiki-batch.mts  import-wiki-games.ts  import-wiki-page.mts  ingest.mjs  ingest.ts  lib.mjs  push-assets.ts  similar.mjs  similar.ts  sync-wiki.mts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/[...slug]/: layout.tsx  page.tsx  wiki.css
web/src/app/builds/: BuildsBrowser.tsx  (+2 more)
web/src/components/: MassApply.tsx  Select.tsx  VisualEditor.tsx  WikiEditor.tsx  useModerator.ts
web/src/cube/: cube.ts  mapping.ts  registry.tsx  render.tsx  schemas.ts
web/src/lib/: assets.ts  auth.ts  blame.ts  blobstore.ts  commit-heatmap.ts  contrib.ts  db.ts  embed.ts  ffmpeg.ts  filetree.ts  fingerprint.ts  format.ts  gs.ts  hexdump.ts  highlight.ts  http.ts  imgpng.ts  ingest.ts  linediff.ts  media.ts  meta.ts  psd-cmyk.ts  psd.ts  queries.ts  range.ts  ratelimit.ts  repo-manifest.ts  repo.ts  slug.ts  submission-assets.ts  tiers.ts  tlsh.ts  types.ts  validate.ts  wav.ts  wiki-auth.ts
web/tests/: auth.test.ts  blame.test.ts  blobstore.test.ts  commit-heatmap.test.ts  ffmpeg.test.ts  gs.test.ts  imgpng.test.ts  lib.test.ts  linediff.test.ts  media.test.ts  psd.test.ts  range.test.ts  ratelimit.test.ts  repo.test.ts  slug.test.ts  validate.test.ts  wav.test.ts
windows/: .gitignore  README.md  build.ps1  make-sample-iso.py
windows/PrismWin/: App.xaml  App.xaml.cs  AssetStaging.cs  CliMode.cs  DocHighlighter.cs  Format.cs  MainWindow.xaml  MainWindow.xaml.cs  NativeMethods.cs  PrismService.cs  PrismWin.csproj  Program.cs  RecordDoc.cs  ScreenshotMode.cs  SizerBar.cs  SystemTheme.cs  ViewModels.cs  app.manifest
(+72 files in other folders)
