[workspace]
resolver = "2"
members = [
    "crates/curator-core",
    "crates/curator-cli",
]
# curator-gui-win is added on Windows only (see crates/curator-gui-win).
exclude = ["crates/curator-gui-win"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Hidden Palace <hp@hiddenpalace.org>"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
hex = "0.4"
sha2 = "0.10"
sha1 = "0.10"
md-5 = "0.10"
blake3 = "1"
fastcdc = "3"
rusqlite = { version = "0.31", features = ["bundled"] }
directories = "5"
zip = { version = "2", default-features = false, features = ["deflate"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
