[project]
name = "curator-adapter"
version = "0.1.0"
description = "Curator's JSON boundary over ps2exe: parse a disc image, emit canonical-raw JSON + NDJSON progress."
requires-python = ">=3.10,<3.11"
dependencies = [
    "pycdlib==1.14.0",
    "pyisotools>=2.4.6",
    "methodtools>=0.4.7",
    "pefile>=2023.2.7",
    "pycryptodome>=3.18.0",
    "libarchive-c>=4.0",
    "numpy>=1.25.0",
    "pathlab>=0.2",
    "xxhash>=3.2.0",
    "machfs>=1.3",
    "rarfile>=4.0",
    "psutil>=5.9",
    "bitarray>=3.8.1",
    "inflate64>=1.0.4",
    "fastcdc>=1.7.0",
    "blake3>=1.0.8",
    "py-tlsh>=5.0.0",
]

[project.scripts]
curator-adapter = "curator_adapter.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# ps2exe itself is loaded from ../lib/ps2exe at runtime via sys.path (its module
# layout is top-level, not a pip-installable package), so it is not a dependency here.
