[project]
name = "curator-adapter"
version = "0.1.0"
description = "Curator's JSON boundary over ps2exe: parse a disc image, emit canonical-raw JSON + NDJSON progress."
requires-python = ">=3.10,<3.11"
dependencies = [
    "pycdlib==1.14.0",
    "pyisotools==2.4.7",
    "methodtools==0.4.7",
    "pefile==2024.8.26",
    "pycryptodome==3.23.0",
    "libarchive-c==5.3",
    "numpy==2.2.6",
    "pathlab==0.2",
    "xxhash==3.7.0",
    "machfs==1.3",
    "rarfile==4.2",
    "psutil==7.2.2",
    "bitarray==3.8.1",
    "inflate64==1.0.4",
    "fastcdc==1.7.0",
    "blake3==1.0.8",
    "py-tlsh==5.0.0",
]

[project.scripts]
curator-adapter = "curator_adapter.cli:main"

[dependency-groups]
dev = ["pytest>=8", "pyinstaller==6.20.0"]

[tool.pytest.ini_options]
# Put the adapter root on sys.path so `import curator_adapter` resolves from the
# source tree without installing the project (CI runs numpy-only, --no-project).
pythonpath = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# ps2exe itself is loaded from ../lib/ps2exe at runtime via sys.path (its module
# layout is top-level, not a pip-installable package), so it is not a dependency here.
