[package]
name = "curator-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Curator command-line: analyze disc images to DAT/JSON and build the local library."

[lib]
name = "curator_cli"
path = "src/lib.rs"

[[bin]]
name = "curator"
path = "src/main.rs"

[dependencies]
curator-core = { path = "../curator-core" }
clap = { version = "4", features = ["derive", "env"] }
indicatif = "0.17"
anyhow = { workspace = true }
serde_json = { workspace = true }
ureq = { version = "2", default-features = false, features = ["native-tls"] }
native-tls = "0.2"
